erDiagram
    USERS {
        int id PK
        varchar username
        varchar email
        varchar password_hash
        varchar avatar_url
        varchar banner_url
        varchar faceit_id
        varchar faceit_level
        varchar steam_url
        varchar discord_username
        varchar region
        timestamp created_at
        timestamp updated_at
    }

    TEAMS {
        int id PK
        varchar name
        varchar logo_url
        varchar banner_url
        int captain_id FK
        int elo_avg
        varchar region
        timestamp created_at
        timestamp updated_at
    }

    TEAM_MEMBERS {
        varchar id PK
        varchar username
        varchar avatar
        int faceitLevel
        boolean isLeader
    }

    MAPS {
        int id PK
        varchar title
        varchar img
    }

    SCRIMS {
        int id PK
        int teamA FK
        int teamB FK
        int mapId FK
        varchar horaire
        timestamp created_at
        timestamp updated_at
    }

    MATCHES {
        varchar id PK
        varchar teamA
        varchar teamB
        int scoreA
        int scoreB
    }

    NOTIFICATIONS {
        varchar id PK
        varchar type
        varchar title
        varchar subtitle
        varchar timestamp
    }

    SCRIM_ANNOUNCEMENTS {
        varchar id PK
        varchar teamName
        varchar timestamp
    }

    USERS ||--o{ TEAMS : "captain of"
    TEAMS ||--o{ SCRIMS : "team A"
    TEAMS ||--o{ SCRIMS : "team B"
    TEAMS ||--o{ MATCHES : "team A"
    TEAMS ||--o{ MATCHES : "team B"
    MAPS ||--o{ SCRIMS : "played on"
    TEAMS ||--o{ SCRIM_ANNOUNCEMENTS : "creates"

